--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@
     --primary-accent: #d9d9d9;
     --secondaryaccent:#3164F4;
 }
+
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
