some adjustments in the website itself

--- a/style.css
+++ b/style.css
@@ -15,12 +15,11 @@
 body {
     background-color: var(--primary-accent);
     font-family: 'Montserrat', sans-serif;
-    line-height: 1.2;
+    line-height: 1.3;
 }
 
 header {
     padding: 1rem 0;
-    background-color: azure;
 }
 
 header  li {
@@ -106,7 +105,6 @@ section {
 .try__free__btn, 
 .signup__btn {
     text-align: center;
-    width: 100%;
     background-color: #3164F4;
     color: white;
 }
@@ -118,9 +116,13 @@ section {
     border-radius: 6px;
     padding: 0.4rem 0.6rem;
     margin-top: 0.3rem;
-    width: 100%;
+    max-width: 100%;
     text-align: center;
     font-weight: 600;
+}
+
+.how__it__works__btn{
+    padding: 0.3rem;
 }
 
 .try__now__btn, 
@@ -129,9 +131,7 @@ section {
     color: black;
 }
 
-
 .companies {
-    margin-top: rem;
     text-align: center;
 }
 
@@ -156,7 +156,7 @@ section {
 .smart__container, 
 .cost__container,
 .start,
-.opinions  {
+.opinions {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -164,9 +164,8 @@ section {
 }
 
 
-.intro__description, 
-.hero__description,
-.costsaver__descrition {
+
+.description {
     order: 2;
 }
 
@@ -182,11 +181,6 @@ section {
     padding: 2rem;
     border-radius: 20px;
 }
-
-.security__img {
-    display: none;
-}
-
 
 .step {
     padding: 1rem 0;
@@ -220,7 +214,17 @@ section {
 
 footer {
     border-top: 2px solid gray;
+    padding: 2rem 0;
 }
+
+.footer__container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+
+
 
 @media (min-width: 600px) {
     .intro, 
@@ -232,19 +236,23 @@ footer {
         flex-direction: row;
     }
 
+    .description {
+        max-width: 40%;
+    }
+
     .hero__text{
         text-align: center;
     }
 
     .ilustration{
         order: 2;
+        max-width: 50%;
     }
 
     .step {
         padding: 1rem 0;
     }
 }
-
 
 @media (min-width: 800px) {
 
@@ -270,6 +278,7 @@ footer {
     .navbar__item {
         display: block;
     }
+
     .burger {
         display: none;
     }
