--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
+
 :root {
     --primary-accent: #d9d9d9;
     --secondaryaccent:#3164F4;
@@ -47,8 +48,13 @@ p {
     margin: 0.5rem 0;
 }
 
+h3 {
+    padding-top: 1rem;
+    color: black;
+}
+
 .container {
-    width: 85%;
+    width: 90%;
     max-width: 1000px;
     margin: auto;
 }
@@ -86,7 +92,6 @@ p {
     border-radius: 9px;
 }
 
-
 .hero__text, 
 .intro__text,
 .costsaver__text{
@@ -115,7 +120,9 @@ p {
 .intro, 
 .smart__container,
 .cost__container,
-.start {
+.start, 
+.join__container,
+.opinions{
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -153,9 +160,14 @@ p {
 .companies__list {
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
 }
 .companies {
     text-align: center;
+}
+
+.company__list__item {
+    flex: 1;
 }
 .companies ion-icon {
     font-size: 4rem;
@@ -167,6 +179,38 @@ p {
     padding: 1.5rem;
     border-radius: 10px;
 }
+
+.join__container, .opinions div  {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 2rem;
+}
+
+
+.testimonials {
+    text-align: center;
+}
+.steps {
+    margin-top: 1rem;
+}
+
+
+
+.step + .step {
+    border-top: 1px solid ;
+}
+
+
+.opinions div {
+    padding: 2rem;
+    margin-top: 1rem;
+}
+
+footer {
+    border-top: 2px solid;
+    padding: 2.5rem 0;
+}
+
 
 @media (max-width: 660px) {
     .try__now__btn, 
@@ -194,7 +238,9 @@ p {
     .intro, 
     .start,
     .smart__container,
-    .cost__container{
+    .cost__container,
+    .join__container,
+    .opinions{
         flex-direction: row;
         justify-content: space-between;
     }
@@ -202,6 +248,18 @@ p {
     .smarttest__description,
     .costsaver__text {
         max-width: 50%;
+    }
+
+    .join__description {
+        max-width: 45%;
+    }
+
+    .steps {
+        max-width: 50%;
+    }
+
+    .opinion + .opinion {
+        margin-left: 1rem;
     }
 
     .intro .ilustration,
