--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h3 {
 .cost__container,
 .start, 
 .join__container,
-.opinions{
+.opinions, .work__invitation{
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -227,6 +227,53 @@ footer {
     margin-top: 1rem;
 }
 
+
+/* STYLING ABOUT US PAGE  */
+.about__us div {
+    text-align: center;
+}
+
+.about__us .ilustration, .work__invitation .ilustration {
+    margin: 1.5rem 0;
+}
+
+.work__invitation .ilustration {
+    max-width: 65%;
+}
+
+.work__invitation h2 {
+    text-align: center;
+}
+
+.mission__description {
+    border-bottom: 2px solid var(--neutral-dar-gray);
+}
+
+.team {
+    text-align: center;
+}
+
+
+.people {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.people div {
+    padding: 1rem;
+}
+
+.people p {
+    font-size: 0.7rem;
+}
+
+.people img {
+    border-radius: 50px;
+}
+
+
+
+
 /* STYLING CONCTACT PAGE  */
 
 .contact__container {
@@ -302,7 +349,7 @@ input, textarea, .send__message__btn{
     .smart__container,
     .cost__container,
     .join__container,
-    .opinions, .contact__container{
+    .opinions, .contact__container, .work__invitation{
         flex-direction: row;
         justify-content: space-between;
     }
@@ -314,6 +361,12 @@ input, textarea, .send__message__btn{
     .smarttest__description,
     .costsaver__text {
         max-width: 50%;
+    }
+
+    .work__invitation h1 {
+        font-size: 2rem;
+        text-align: left;
+        max-width: 30%;
     }
 
     .join__description, form {
@@ -336,16 +389,27 @@ input, textarea, .send__message__btn{
 
 
     .intro .ilustration,
-    .start .ilustration, .contact__container .ilustration{
+    .start .ilustration,
+    .contact__container .ilustration,
+    .work__invitation .ilustration{
        max-width: 45%;
+    }
+
+    .about__us div {
+        padding: 0 2.5rem;
+        text-align: center;
+    }
+
+    .people {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
     }
 
     .footer__container {
         display: flex;
         justify-content: space-between;
     }
-
-    
+ 
 }
 
 
@@ -379,6 +443,11 @@ input, textarea, .send__message__btn{
 
     .company__list__item {
         flex: 1 1 100px;
+    }
+
+    .about__us div {
+        padding: 0 5rem;
+        text-align: center;
     }
 
 }
