--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ p {
 }
 
 #flyoutMenu {
-    width: 100dvw;
-    height: 100dvw;
+    width: 100%;
+    height: 100%;
     background-color: var(--neutral-dar-gray);
     position: fixed;
     top: 0;
