--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 header {
     padding: 1rem 0;
+    background-color: #fff;
     box-shadow: 1px 2px 4px 1px rgb(190, 190, 190);
     position: fixed;
     width: 100%;
