--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ header {
     padding: 1rem 0;
     background-color: #fff;
     box-shadow: 1px 2px 4px 1px rgb(190, 190, 190);
-    position: fixed;
-    width: 100%;
 }
 
 header  li {
@@ -47,15 +45,15 @@ a {
 }
 
 section {
-    padding: 2rem 0;
+    padding-top: 5rem;
+}
+
+section:last-child {
+    padding-bottom: 5rem;
 }
 
 p {
     margin: 0.5rem 0;
-}
-
-main {
-    padding:5rem 0;
 }
 
 .container {
